# Cources

./: .env  .gitignore  docker-compose.yml
core/: .env  dockerfile  pyproject.toml
core/core/: settings.py
web/: dockerfile  package.json
