[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Dikroll <bushmelew07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
django = "5.1.1"
django-cors-headers = "4.4.0"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.4.0"
django-debug-toolbar = "5.0.1"
pillow = "10.4.0"
sqlparse = "0.5.1"
tzdata = ">=2025.2"
psycopg2-binary = "2.9.10"
python-decouple = "3.8"
django-redis = "5.4.0"
python-dotenv = "1.0.1"
gunicorn = "22.0.0"
requests = "2.26.0"
pandas = "2.3.0"
openpyxl = "^3.1.5"
redis = ">=4.6.0,<6.0.0"
celery = "^5.5.3"
pydantic = "^2.11.7"
drf-spectacular = "^0.28.0"
django-prometheus = "^2.4.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
